fixed bug with table overflow

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,30 @@
   box-shadow: 1px 0px 5px black;
   margin: auto;
   overflow-x: hidden;
-  text-align: center;
   overflow-y: hidden
+}
+
+#pdf-content h1, h3 {
+  text-align: center;
+}
+
+#pdf-content h3 {
+    margin-bottom: 0;
+    margin-top: 5px;
+}
+
+.table-count {
+  text-align: right;
+}
+
+.table-index {
+  font-weight: bold;
+}
+
+th, td {
+  padding: 1px 3px;
+}
+
+th {
+  text-align: center;
 }
